style.css
/* ... */
.aside-cards-wrapper {
    height: 90%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 21px;
}
.aside-cards-wrapper .card-item {
    width: 100%;
    display: flex;
    padding: 1.5%;
    color: black;
}
.aside-description {
    display: flex;
    flex-direction: column;
    margin: 10px 0 0 10px;
}
.aside-description .stars {
    margin-top: auto;
    margin-bottom: 10px;
}
.aside-cards-wrapper img {
    border-radius: 20px 0px 0px 20px;
    width: 40%;
    height: 135px;
    margin: 0;
    margin-top: auto;
    margin-bottom: auto;
    object-fit: cover;
}
/* activités */
.activites {
    margin-bottom: 60px;
}
.section-container {
    display: flex;
    justify-content: space-between;
}
.activites-title h2 {
    padding-top: 40px;
}
.section-item {
    display: flex;
    flex-direction: column;
    background-color: white;
    border-radius: 20px;
    transition: .3s;
    box-shadow: 4px 8px 20px rgba(0, 0, 0, 0.1);
    width: 20%;
    color: black;
}
.section-item p {
    font-weight: bold;
    font-size: 21px;
}
.section-item:hover {
    transform: scale(1.05);
}
.section-item img {
    height: 88%;
    width: 100%;
    object-fit: cover;
    border-radius: 20px 20px 0 0;
}
.double-item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 25%;
    height: 450px;
}
.double-item img {
    width: 100%;
    object-fit: cover;
    border-radius: 20px 20px 0 0;
    height: 70%;
}
.double-item .section-item {
    height: 200px;
}
.section-container .card-item {
    background-color: white;
    padding: 0;
    width: 100%;
}
.section-container h3 {
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 20px;
}
.section .card-item img {
    border-radius: 20px 20px 0 0;
    width: 100%;
}
.big-item, .small-item {
    width: 100%;
}
.activites .section-container .big-item {
    height: 50%;
}
.big-item img {
    height: 78%;
}
.activites .section-container .small-item {
    height: 40%;
}
.small-item img {
    height: 68%;
}
.footer {
    background-color: var(--background-color);
}
.footer-container {
    width: 90%;
    margin: auto;
    display: flex;
    padding: 30px 0 15px 0;
}
.footer-element {
    width: 33%;
}
.footer h2 {
    font-size: 16px;
}
ul {
    list-style: none;
    padding: 0;
}
ul a {
    color:black;
    line-height: 30px;
    font-size: 14px;
}
@media screen and (max-width: 992px) {
    .nav {
        display: block;
        text-align: center;
        width: 100%;
   }
    .logo {
        margin: 20px;
   }
    .menu {
        display: flex;
        justify-content: space-around;
   }
    .menu a {
        padding: 10px;
        width: 50%;
   }
    .menu a:hover {
        border-top: none;
        border-bottom: solid 3px var(--main-color);
   }
    .slogan {
        margin-top: 80px;
        margin-bottom: 30px;
   }
    .search-mobile {
        display: contents;
   }
   .fa-magnifying-glass:before, .fa-search:before {
    content: "\f002" !important;
    font-family: "Font Awesome 6 Free";
    }
   .input {
        width: 100%;
   }
    .button {
        border-radius: 15px;
        transform: translateX(-10px);
   }
    .filters {
        padding-top: 50px;
   }
    .filters p {
        margin: 0;
   }
    .filters ul {
        flex-wrap: wrap;
   }
    .filters ul li {
        margin-bottom: 10px;
   }
    .container {
        flex-direction: column-reverse;
   }
    .hebergements-container {
        width: 100%;
        margin: auto;
        background-color: white;
        padding: 0;
   }
    .hebergement-cards {
        justify-content: space-between;
   }
    .hebergements-cards .card-item {
        background-color: white;
        padding: 0;
        width: 100%;
   }
    .hebergement-cards a {
        margin-left: 0;
        display: block;
   }
   .hebergements {
        margin-left: 0;
   }
    .hebergements h2 {
        margin: 50px 0 30px 0;
   }
    div.hebergement-cards .more {
        margin-top: 10%;
        display: block;
   }
    .aside-title h2 {
        margin: 50px 0 30px 0;
   }
    .aside-container {
        width: 100%;
   }
    .aside-cards-wrapper .card-item {
        margin-bottom: 20px;
        padding: 0.5%;
   }
}
@media screen and (max-width: 768px) {
    .logo {
        margin-left: 50px;
   }
    .menu {
        display: flex;
        justify-content: center;
   }
    .menu a {
        border-bottom: solid 3px var(--sub-color);
   }
   .container {
        width: 100%;
   }
   .hebergements-container {
        width: 90%;
   }
    .hebergement-cards {
        display: block;
   }
    .hebergement-cards .card-item {
        width: 100%;
        padding: 1%;
        padding-bottom: 3%;
   }
   .hebergement-cards .card-item img {
    height: 160px;
    }
   .container h3, .container .card-text, .container .stars {
        margin-left: 3%;
   }
    .card-item .card-title {
        margin-top: 2%;
   }
    .aside-container {
        border-radius: 0;
   }
    .aside-cards-wrapper .aside-description h3, .aside-cards-wrapper .aside-description p {
        text-align: left;
   }
    .section-container {
        flex-direction: column;
   }
    .activites .section-container .section-item, .activites .section-container .double-item {
        width: 100%;
        height: 260px;
        margin-bottom: 25px;
   }
   .activites .section-container .double-item {
        height: 16%;
        margin: 0;
   }
   .activites {
        margin-bottom: 30px;
    }
    .section-item img, .double-item img {
        height: 80%;
   }
    .footer-container {
        flex-direction: column;
   }
   .footer-element {
    width: auto;
   }
}

